--- a/src/patterns/__environment__/40-compounds/popular-links-menu.hbs
+++ b/src/patterns/__environment__/40-compounds/popular-links-menu.hbs
@@ -1,8 +1,15 @@
-<div class="popular-links-menu">
+<div class="popular-links-menu{{#if hours}} -hours{{/if}}">
   <h4 class="heading popular-links-menu-title">{{title}}</h4>
   <ul class="popular-links-menu-list">
     {{#each items}}
-    <li class="popular-links-menu-list-item"><a class="link -popular" href="{{link.href}}">{{title}}</a></li>
+    <li class="popular-links-menu-list-item">
+      {{#if link}}
+        {{#unless ../hours}}{{assign 'classes' '-popular'}}{{/unless}}
+        {{> atoms-link label=title}}
+      {{else}}
+        {{title}}
+      {{/if}}
+    </li>
     {{/each}}
   </ul>
 </div>
