--- a/src/patterns/__environment__/50-organisms/major.hbs
+++ b/src/patterns/__environment__/50-organisms/major.hbs
@@ -1,4 +1,4 @@
-<div class="section-major{{#if theme}} -{{theme}}{{/if}}">
+<div class="section-major{{#if theme}} -{{theme}}{{/if}}{{#if classes}} {{classes}}{{/if}}">
   {{> tokens-heading level=2 classes="section-major-title" icon=false}}
   <div class="section-major-body">
     {{#block "section-major-body"}}{{/block}}
