--- a/src/patterns/__environment__/30-molecules/form~libwizard.hbs
+++ b/src/patterns/__environment__/30-molecules/form~libwizard.hbs
@@ -1,2 +1,5 @@
-<div id="form_{{trimSubstringStart libwizard-id 'form_'}}"></div>
-<script type="text/javascript" src="https://emory.libwizard.com/form_loader.php?id={{trimSubstringStart libwizard-id 'form_'}}&noheader=0"></script>
+<eul-libwizard-form inline-template :fid="'{{trimSubstringStart libwizard-id 'form_'}}'">
+
+  <div id="form_{{trimSubstringStart libwizard-id 'form_'}}"></div>
+
+</eul-libwizard-form>
