--- a/src/patterns/__environment__/20-atoms/rule.hbs
+++ b/src/patterns/__environment__/20-atoms/rule.hbs
@@ -1,1 +1,1 @@
-<hr class="rule{{#if style}} -{{style}}{{/if}}">
+<hr class="rule{{#if style}} -{{style}}{{/if}}{{#if classes}} {{classes}}{{/if}}">
