--- a/src/patterns/__environment__/30-molecules/branding-footer.hbs
+++ b/src/patterns/__environment__/30-molecules/branding-footer.hbs
@@ -1,6 +1,6 @@
 <eul-branding-footer inline-template v-cloak>
 
-  <div class="branding-footer">
+  <div class="branding-footer{{#if classes}} {{classes}}{{/if}}">
     <a class="branding-footer-logo" href="/">
       {{> tokens-logo id='Emory-Libraries' hyperlink=false}}
     </a>
