--- a/src/patterns/__environment__/40-compounds/nav-menu~main.hbs
+++ b/src/patterns/__environment__/40-compounds/nav-menu~main.hbs
@@ -2,13 +2,13 @@
   <nav class="nav-menu-main">
 
     {{! Toggles }}
-    {{#each navigation}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
-    {{#each utilities}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
+    {{#each navigation.main}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
+    {{#each navigation.utilities}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
 
     {{! Desktop }}
     <nav class="nav-menu-main-nav -desktop">
 
-      {{#each navigation}}
+      {{#each navigation.main}}
         <div class="nav-menu-main-nav-group" @mouseover='open' @mouseleave='close'>
           {{> atoms-nav-button-main classes='' mouseover=false mouseleave=false}}
           {{> compounds-subnav-menu-main heading=label navigation=subnavigation mouseover=false mouseleave=false}}
@@ -20,7 +20,7 @@
     {{! Tablet }}
     <nav class="nav-menu-main-nav -tablet">
 
-      {{#each navigation}}
+      {{#each navigation.main}}
         {{> atoms-nav-button-main classes='' mouseover='open' mouseleave='close'}}
         {{> compounds-subnav-menu-main heading=label navigation=subnavigation mouseover='open' mouseleave='close'}}
       {{/each}}
@@ -30,23 +30,26 @@
     {{! Mobile }}
     <nav class="nav-menu-main-nav -mobile">
 
-      {{> atoms-input-toggle id='nav-menu-main--mobile-toggle' classes=''}}
+      {{> atoms-input-toggle id='nav-menu-main--mobile-menu-toggle' classes='for-menu'}}
+      {{> atoms-input-toggle id='nav-menu-main--mobile-search-toggle' classes='for-search'}}
 
       <div class="nav-menu-main-nav-toggles">
-        {{> atoms-nav-button-toggle icon='material-menu' for-suffix='mobile-toggle' label='Menu' classes='-open'}}
-        {{> atoms-nav-button-toggle icon='material-close' for-suffix='mobile-toggle' label='Close' classes='-close'}}
+        {{> atoms-nav-button-toggle search=false icon='material-menu' for-suffix='mobile-menu-toggle' label='Menu' classes='for-menu -open'}}
+        {{> atoms-nav-button-toggle search=false icon='material-close' for-suffix='mobile-menu-toggle' label='Close' classes='for-menu -close'}}
+        {{> atoms-nav-button-toggle search=false icon='material-search' for-suffix='mobile-search-toggle' label='Search' classes='for-search -open'}}
+        {{> atoms-nav-button-toggle search=false icon='material-chevron_right' for-suffix='mobile-search-toggle' label='Back to Menu' classes='for-search -close'}}
       </div>
 
-      <div class="nav-menu-main-nav-menu">
+      <div class="nav-menu-main-nav-menu is-menu">
 
-        {{> compounds-nav-menu-utility mobile-only=true}}
+        {{#with navigation}}{{> compounds-nav-menu-utility mobile-only=true classes=''}}{{/with}}
 
         <div class="nav-menu-main-nav-menu-area">
-          {{#each navigation}}
+          {{#each navigation.main}}
             {{> atoms-nav-button-main classes='' mouseover=false mouseleave=false}}
             {{> compounds-subnav-menu-main heading=label navigation=subnavigation mouseover=false mouseleave=false}}
           {{/each}}
-          {{#each utilities}}
+          {{#each navigation.utilities}}
             {{#unless subnavigation}}
               {{> atoms-nav-button-main classes='' link=true}}
             {{else}}
@@ -56,7 +59,13 @@
           {{/each}}
         </div>
 
-        {{#with button}}{{> atoms-nav-button-librarian classes=''}}{{/with}}
+        {{#with navigation.button}}{{> atoms-nav-button-librarian classes=''}}{{/with}}
+
+      </div>
+
+      <div class="nav-menu-main-nav-menu is-search">
+
+        {{#with search}}{{> organisms-search-menu classes='' home=false}}{{/with}}
 
       </div>
 
@@ -70,13 +79,13 @@
   <nav class="nav-menu-main">
 
     {{! Toggles }}
-    {{#each navigation}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
-    {{#each utilities}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
+    {{#each navigation.main}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
+    {{#each navigation.utilities}}{{> atoms-input-toggle id=(combine 'nav-menu-main--' (dashcase (lowercase label)))}}{{/each}}
 
     {{! Desktop }}
     <nav class="nav-menu-main-nav -desktop">
 
-      {{#each navigation}}
+      {{#each navigation.main}}
         <div class="nav-menu-main-nav-group">
           {{> atoms-nav-button-main}}
           {{> compounds-subnav-menu-main heading=label navigation=subnavigation noscript=true}}
@@ -88,7 +97,7 @@
     {{! Tablet }}
     <nav class="nav-menu-main-nav -tablet">
 
-      {{#each navigation}}
+      {{#each navigation.main}}
         {{> atoms-nav-button-main classes=''}}
         {{> compounds-subnav-menu-main heading=label navigation=subnavigation noscript=true}}
       {{/each}}
@@ -98,23 +107,26 @@
     {{! Mobile }}
     <nav class="nav-menu-main-nav -mobile">
 
-      {{> atoms-input-toggle id='nav-menu-main--mobile-toggle' classes=''}}
+      {{> atoms-input-toggle id='nav-menu-main--mobile-menu-toggle' classes='for-menu'}}
+      {{> atoms-input-toggle id='nav-menu-main--mobile-search-toggle' classes='for-search'}}
 
       <div class="nav-menu-main-nav-toggles">
-        {{> atoms-nav-button-toggle icon='material-menu' for-suffix='mobile-toggle' label='Menu' classes='-open'}}
-        {{> atoms-nav-button-toggle icon='material-close' for-suffix='mobile-toggle' label='Close' classes='-close'}}
+        {{> atoms-nav-button-toggle search=false icon='material-menu' for-suffix='mobile-menu-toggle' label='Menu' classes='for-menu -open'}}
+        {{> atoms-nav-button-toggle search=false icon='material-close' for-suffix='mobile-menu-toggle' label='Close' classes='for-menu -close'}}
+        {{> atoms-nav-button-toggle search=false icon='material-search' for-suffix='mobile-search-toggle' label='Search' classes='for-search -open'}}
+        {{> atoms-nav-button-toggle search=false icon='material-close' for-suffix='mobile-chevron_right' label='Back to Menu' classes='for-search -close'}}
       </div>
 
-      <div class="nav-menu-main-nav-menu">
+      <div class="nav-menu-main-nav-menu is-menu">
 
-        {{> compounds-nav-menu-utility mobile-only=true}}
+        {{#with navigation}}{{> compounds-nav-menu-utility mobile-only=true classes=''}}{{/with}}
 
         <div class="nav-menu-main-nav-menu-area">
-          {{#each navigation}}
+          {{#each navigation.main}}
             {{> atoms-nav-button-main classes='' mouseover=false mouseleave=false}}
             {{> compounds-subnav-menu-main heading=label navigation=subnavigation mouseover=false mouseleave=false noscript=true}}
           {{/each}}
-          {{#each utilities}}
+          {{#each navigation.utilities}}
             {{#unless subnavigation}}
               {{> atoms-nav-button-main classes='' link=true}}
             {{else}}
@@ -124,7 +136,13 @@
           {{/each}}
         </div>
 
-        {{#with button}}{{> atoms-nav-button-librarian classes=''}}{{/with}}
+        {{#with navigation.button}}{{> atoms-nav-button-librarian classes=''}}{{/with}}
+
+      </div>
+
+      <div class="nav-menu-main-nav-menu is-search">
+
+        {{#with search}}{{> organisms-search-menu classes='' home=false noscript=true}}{{/with}}
 
       </div>
 
