--- a/src/patterns/__environment__/10-tokens/heading.hbs
+++ b/src/patterns/__environment__/10-tokens/heading.hbs
@@ -4,7 +4,7 @@
   {{heading}}
   {{#if (and (gt level 1) toc)}}
     <a class="link anchor" href="#{{dashcase (lowercase heading)}}">
-      {{> tokens-icon id='material-anchor'}}
+      {{> tokens-icon id='material-anchor' classes=''}}
     </a>
   {{/if}}
 </h{{level}}>
