--- a/src/patterns/__environment__/60-templates/event.hbs
+++ b/src/patterns/__environment__/60-templates/event.hbs
@@ -1,45 +1,28 @@
+{{! Fetch the feed's content }}
+{{assign 'data' (fetchFeed (combine __params__.feed '?eventID=' __params__.id))}}
 
+{{! Assign called event data to event object }}
+{{assign 'event' data.0}}
 
-{{{_inspect __params__}}}
+{{#if event}}
 
+  {{! Set the title to be the title of the event }}
+  {{assign 'title' event.title}}
+  {{assign 'system.title' title}}
 
-{{! Validate the given feed source. }}
-{{#if feed.url}}
+  {{! Set the subtitle to be the date of the event }}
+  {{assign 'subtitle' event.dateTimeFormatted}}
 
-  {{! Fetch the feed's content }}
-  {{assign 'content' (fetchFeed feed.url)}}
-
-  {{! Loop through content items to find the one with the matchin eventID}}
-  {{#each content}}
-    {{#if (eq this.eventID ../feed.eventID)}}
-      {{! Capture the event object that matches}}
-      {{storageSet 'event' this}}
-    {{/if}}
-  {{/each}}
-
-  {{! Assign the matching entry as the page's event object}}
-  {{assign 'event' (storageGet 'event')}}
-
-  {{! Get event topics }}
-  {{#each event.customFields}}
-    {{#if (eq label 'University Event Topic')}}
-      {{storageSet 'topics' value}}
-    {{/if}}
-  {{/each}}
-
-  {{! Assign topics }}
-  {{assign 'topics' (storageGet 'topics')}}
+  {{! Set the hero image (This could be bad)}}
+  {{assign 'hero' event.eventImage.url}}
 
   {{! Add location to sections object for sidebar list}}
-  {{assign 'location' (JSONparse (combine '{"content": "' (sanitize event.location) '","icon": "material-map","title":"Location"}'))}}
+  {{assign 'location' (objectify content=(sanitize event.location) icon="material-map" title="Location")}}
+
   {{storagePush 'sections' location}}
 
-  {{! set the button values}}
-  {{assign 'buttons' (JSONparse (combine '[{"href": "' event.signUpUrl '","label": "Register Now"}]'))}}
-
-  {{! Loop through Get sidebar list items}}
+  {{! Loop through custom fields to get sidebar list items}}
   {{#each event.customFields}}
-
     {{assign 'title' label}}
     {{#if (indexOf value ',')}}
      {{assign 'content' (split value ",")}}
@@ -75,42 +58,51 @@
       {{assign 'icon' 'material-mail'}}
       {{storagePush 'sections' this}}
     {{/if}}
-
   {{/each}}
+
+  {{! set the button values}}
+  {{assign 'button' (objectify href=event.signUpUrl label="Register Now")}}
 
   {{! Set the looped sections to the sections array }}
   {{assign 'sections' (storageGet 'sections')}}
 
+  {{! Get event topics }}
+  {{#each event.customFields}}
+    {{#if (eq label 'University Event Topic')}}
+      {{storageSet 'topics' value}}
+    {{/if}}
+  {{/each}}
+
+  {{! Assign topics }}
+  {{assign 'topics' (storageGet 'topics')}}
+
   {{! Set (decoded) related topics value }}
   {{assign 'topics' (decodeHTML topics)}}
-
-  {{! Set the subtitle to be the date of the event }}
-  {{assign 'title' event.title}}
-  
-  {{! Set the subtitle to be the date of the event }}
-  {{assign 'subtitle' event.dateTimeFormatted}}
-
-  {{! set the hero image (This could be bad)}}
-  {{assign 'hero' event.eventImage.url}}
 
 {{/if}}
 
 <div class="event-page">
   <header class="event-page-header"></header>
   <div class="event-page-main">
-
+    {{#unless event}}
+      {{>organisms-intro-alt-text title="Event Not Found"}}
+    {{/unless}}
     {{#extend 'organisms-main' type="event-page" classes="event-page-main"}}
       {{#content 'section-main-body'}}
-        {{> tokens-text rich=true text=event.description}}
-        {{>atoms-rule}}
-        {{>tokens-heading level=6 heading="Related University Event Topics"}}
-        {{>tokens-text text=topics}}
+        {{! If eventID isn't found...}}
+        {{#if event}}
+          {{> tokens-text rich=true text=event.description}}
+          {{>atoms-rule}}
+          {{>tokens-heading level=6 heading="Related University Event Topics"}}
+          {{>tokens-text text=topics}}
+        {{/if}}
       {{/content}}
+      {{#if event}}
       {{#content 'section-main-sidebar'}}
         {{>compounds-sidebar-list}}
       {{/content}}
+      {{/if}}
     {{/extend}}
-    
   </div>
   <footer class="event-page-footer"></footer>
 </div>
