Fixes issue of single subject not being interpreted as an array.

--- a/src/patterns/__environment__/60-templates/subject-librarian-directory.hbs
+++ b/src/patterns/__environment__/60-templates/subject-librarian-directory.hbs
@@ -133,6 +133,8 @@
 
   {{/if}}
 
+  {{{assign 'subjects' (arrayify subjects)}}}
+
   {{! Set the librarian's ID if not already set. }}
   {{#unless id}}{{assign 'id' (dashcase (lowercase name))}}{{/unless}}
 
