Adds comment where subjects are arrified

--- a/src/patterns/__environment__/60-templates/subject-librarian-directory.hbs
+++ b/src/patterns/__environment__/60-templates/subject-librarian-directory.hbs
@@ -133,6 +133,7 @@
 
   {{/if}}
 
+  {{! Arrayify subjects in case of single subject listing }}
   {{{assign 'subjects' (arrayify subjects)}}}
 
   {{! Set the librarian's ID if not already set. }}
