--- a/src/patterns/__environment__/50-organisms/footer.hbs
+++ b/src/patterns/__environment__/50-organisms/footer.hbs
@@ -1,3 +1,5 @@
+{{#with footer}}
+
 <footer class="footer">
 
   {{#with navigation}}{{> molecules-branding-footer classes='footer-branding'}}{{/with}}
@@ -17,3 +19,5 @@
   {{#with copyright}}{{> atoms-copyright classes='footer-copyright'}}{{/with}}
 
 </footer>
+
+{{/with}}
