--- a/src/patterns/__environment__/30-molecules/branding-footer.hbs
+++ b/src/patterns/__environment__/30-molecules/branding-footer.hbs
@@ -1,8 +1,16 @@
+{{! Set an active site if none was set. }}
+{{#if (eq (length (filterWhere sites 'active')) 0)}}
+
+  {{! Set the first site to active by default. }}
+  {{assign 'sites.0.active' true}}
+
+{{/if}}
+
 <eul-branding-footer inline-template v-cloak>
 
   <div class="branding-footer{{#if classes}} {{classes}}{{/if}}">
     <a class="branding-footer-logo" href="/">
-      {{> tokens-logo id='Emory-Libraries' hyperlink=false}}
+      {{> tokens-logo id=(default logo 'emory-libraries') hyperlink=false}}
     </a>
     <div class="branding-footer-dropdown">
       <select class="branding-footer-dropdown-menu"
@@ -24,7 +32,7 @@
 
   <div class="branding-footer">
     <a class="branding-footer-logo" href="/">
-      {{> tokens-logo id='Emory-Libraries' hyperlink=false}}
+      {{> tokens-logo id=(default logo 'emory-libraries') hyperlink=false}}
     </a>
   </div>
 
