--- a/src/patterns/__environment__/50-organisms/header.hbs
+++ b/src/patterns/__environment__/50-organisms/header.hbs
@@ -1,3 +1,5 @@
+{{#with header}}
+
 <header class="header">
 
   <div class="header-notifications"></div>
@@ -13,3 +15,5 @@
   </div>
 
 </header>
+
+{{/with}}
