--- a/src/patterns/__environment__/30-molecules/branding-footer.hbs
+++ b/src/patterns/__environment__/30-molecules/branding-footer.hbs
@@ -10,7 +10,7 @@
 
   <div class="branding-footer{{#if classes}} {{classes}}{{/if}}">
     <a class="branding-footer-logo" href="/">
-      {{> tokens-logo id=(default logo 'emory-libraries') hyperlink=false}}
+      {{> tokens-logo id=(default this.logo 'emory-libraries') hyperlink=false}}
     </a>
     <div class="branding-footer-dropdown">
       <select class="branding-footer-dropdown-menu"
@@ -32,7 +32,7 @@
 
   <div class="branding-footer">
     <a class="branding-footer-logo" href="/">
-      {{> tokens-logo id=(default logo 'emory-libraries') hyperlink=false}}
+      {{> tokens-logo id=(default this.logo 'emory-libraries') hyperlink=false}}
     </a>
   </div>
 
